# bashrun

./: AGENTS.md  README.md  pyproject.toml  ruff.toml
src/bashrun/: __init__.py  bash.py
tests/: test_bash.py
