[project]
name = "bashrun"
version = "0.1.0"
description = "Guardrailed shell-exec helpers for Python"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["basedpyright>=1.28.0", "ruff>=0.14.11", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bashrun"]
include = ["src/bashrun/py.typed"]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
